assets/scss/base/_fixes.scss
.form-control,
.form-select {
	background-color: $form-control-bg !important;
	border-color: $form-control-border-color !important;
}

// Fix input/button height mismatch in input groups
.input-group .form-control,
.input-group .form-select,
.input-group .btn {
	height: 100%;
	min-height: 38px; // Bootstrap default
	vertical-align: middle;
	box-sizing: border-box;
}

// Ensure button matches input/select height
.input-group .btn {
	padding-top: 0.375rem;
	padding-bottom: 0.375rem;
	min-height: 38px;
	height: 38px;
}

